--- a/js/package.json
+++ b/js/package.json
@@ -7,13 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "./node_modules/.bin/webpack --watch --config webpack.config.js"
   },
-
   "author": "ahhhz",
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
+    "fuse.js": "^3.0.5",
+    "progress.js": "^1.1.3",
     "webpack": "^2.6.1"
   }
 }
